--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,41 +2,41 @@ name: "Test"
 
 on:
   workflow_dispatch:
-  #push:
+  push:
 
 jobs:
-  test:
-    name: "Test"
-    timeout-minutes: 5
-    if: ${{ !contains(github.event.head_commit.message, '#notest') }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ["ubuntu-latest"]
-        version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-
-      - name: "Setup Python ${{ matrix.version }}"
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.version }}
-
-      - name: "Install ${{ matrix.version }}"
-        working-directory: "src"
-        run: |
-          python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
-
-      - name: "Build ${{ matrix.version }}"
-        run: python -m pip install -e .
-
-      - name: "Test ${{ matrix.version }}"
-        run: |
-          echo "Not much going on here..."
+  #test:
+  #  name: "Test"
+  #  timeout-minutes: 5
+  #  if: ${{ !contains(github.event.head_commit.message, '#notest') }}
+  #  strategy:
+  #    fail-fast: false
+  #    matrix:
+  #      os: ["ubuntu-latest"]
+  #      version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+  #  runs-on: ${{ matrix.os }}
+  #
+  #  steps:
+  #    - name: "Checkout"
+  #      uses: actions/checkout@v4
+  #
+  #    - name: "Setup Python ${{ matrix.version }}"
+  #      uses: actions/setup-python@v5
+  #      with:
+  #        python-version: ${{ matrix.version }}
+  #
+  #    - name: "Install ${{ matrix.version }}"
+  #      working-directory: "src"
+  #      run: |
+  #        python -m pip install -U pip
+  #        python -m pip install -Ur requirements.txt
+  #
+  #    - name: "Build ${{ matrix.version }}"
+  #      run: python -m pip install -e .
+  #
+  #    - name: "Test ${{ matrix.version }}"
+  #      run: |
+  #        echo "Not much going on here..."
 
   lint:
     name: "Lint"
