--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,20 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.dynamic]
 version = { attr = "actions.__version__" }
 
-# Other Tools
+# Black
 
 [tool.black]
 line-length = 119
 
+# Ruff
+
 [tool.ruff]
 line-length = 119
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "B", "Q"]
+
+# Coverage
 
 [tool.coverage.run]
 omit = ["*/*.egg-info/*"]
