--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,15 +9,18 @@ jobs:
     name: "Lint"
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    permissions:
+      contents: read
 
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: "Setup Python 3.11"
+      - name: "Setup Python 3.13"
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.13"
+          cache: "pip"
 
       - name: "Ruff"
         uses: astral-sh/ruff-action@v3
@@ -36,14 +39,16 @@ jobs:
           coverage report -m
 
   test:
-    name: "Test ${{ matrix.version }}"
     runs-on: ubuntu-latest
     timeout-minutes: 5
     if: ${{ !contains(github.event.head_commit.message, '#notest') }}
     strategy:
       fail-fast: false
       matrix:
-        version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+    name: "Test ${{ matrix.version }}"
+    permissions:
+      contents: read
 
     steps:
       - name: "Checkout"
@@ -53,9 +58,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.version }}
+          cache: "pip"
 
       - name: "Install ${{ matrix.version }}"
-        working-directory: "src"
         run: |
           python -m pip install -U pip
           python -m pip install -Ur requirements.txt
