--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,39 @@ jobs:
           coverage xml
           coverage report -m
 
+  build:
+    name: "Build"
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      contents: read
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Setup Python 3.11"
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
+      - name: "Build Dist"
+        run: |
+          python -m pip install -U pip
+          python -m pip install -Ur requirements.txt
+          python -m build
+
+      - name: "Debug"
+        run: |
+          ls -lAh dist
+
+      - name: "Upload to Actions"
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: dist/
+
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -45,7 +78,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        #version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        version: ["3.10", "3.11"]
     name: "Test ${{ matrix.version }}"
     permissions:
       contents: read
@@ -53,6 +87,16 @@ jobs:
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
+
+      - name: "Download Artifact"
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: dist
+
+      - name: "Debug"
+        run: |
+          ls -lAh dist
 
       - name: "Setup Python ${{ matrix.version }}"
         uses: actions/setup-python@v5
@@ -63,8 +107,9 @@ jobs:
       - name: "Install ${{ matrix.version }}"
         run: |
           python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
-          python -m pip install -e .
+          python -m pip install dist/actions_tools-*.whl
+          #python -m pip install -Ur requirements.txt
+          #python -m pip install -e .
 
       - name: "Test ${{ matrix.version }}"
         run: |
