--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,11 @@ jobs:
           python-version: "3.13"
           cache: "pip"
 
+      - name: "Coverage"
+        run: |
+          python -m pip install -U pip
+          python -m pip install -Ur requirements.txt
+
       - name: "Ruff"
         uses: astral-sh/ruff-action@v3
         with:
@@ -74,6 +79,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    needs: [build]
     if: ${{ !contains(github.event.head_commit.message, '#notest') }}
     strategy:
       fail-fast: false
