--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,44 +7,14 @@ on:
 jobs:
   build:
     name: "Build"
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
+    uses: ./.github/workflows/build.yaml
     permissions:
       contents: write
+    with:
+      NAME: release
 
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-
-      - name: "Setup Python 3.13"
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-
-      - name: "Build"
-        run: |
-          python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
-          python -m build
-
-      - name: "Upload to Actions"
-        uses: actions/upload-artifact@v4
-        with:
-          name: release
-          path: dist
-
-      - name: "Upload to Release"
-        if: ${{ github.event_name == 'release' }}
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
-          file: dist/*
-
-  pypi:
-    name: "PyPI"
+  release:
+    name: "Release"
     runs-on: ubuntu-latest
     timeout-minutes: 5
     needs: [build]
@@ -52,6 +22,7 @@ jobs:
       name: pypi
       url: https://pypi.org/p/actions-tools
     permissions:
+      contents: read
       id-token: write # IMPORTANT: this permission is mandatory
 
     steps:
@@ -64,6 +35,14 @@ jobs:
       - name: "Debug"
         run: |
           ls -lAh dist
+
+      - name: "Upload to Release"
+        if: ${{ github.event_name == 'release' }}
+        uses: svenstaro/upload-release-action@v2
+        with:
+          overwrite: true
+          file_glob: true
+          file: dist/*
 
       - name: "Publish to PyPI"
         uses: pypa/gh-action-pypi-publish@release/v1
