--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=cssnr_actions-tools
 sonar.organization=cssnr
 
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=tests/**
