--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,13 +30,23 @@ jobs:
 
       - name: "Ruff"
         uses: astral-sh/ruff-action@v3
-        with:
-          src: "src"
+        #with:
+        #  src: "src"
 
       - name: "Black"
         uses: psf/black@stable
-        with:
-          src: "src"
+        #with:
+        #  src: "src"
+
+      - name: "Mypy"
+        uses: jpetrucciani/mypy-check@master
+        #with:
+        #  src: "src"
+
+      - name: "Isort"
+        uses: isort/isort-action@v1
+        #with:
+        #  requirements-files: "requirements.txt"
 
       - name: "Coverage"
         run: |
@@ -101,8 +111,8 @@ jobs:
 
       - name: "Install ${{ matrix.version }}"
         run: |
-          python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
+          python -m pip install -U pip pytest
+          #python -m pip install -Ur requirements.txt
           python -m pip install dist/actions_tools-*.whl
 
       - name: "Test ${{ matrix.version }}"
