--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,10 @@ select = ["E4", "E7", "E9", "F", "B", "Q"]
 
 [tool.coverage.run]
 omit = ["*/*.egg-info/*"]
+
+# Isort
+
+[tool.isort]
+profile = "black"
+lines_after_imports = 2
+src_paths = ["src", "test"]
