--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ line-length = 119
 
 [tool.ruff]
 line-length = 119
+target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "B", "Q"]
