--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,31 +23,47 @@ jobs:
           cache: "pip"
 
       - name: "Install Requirements"
+        id: install
         run: |
           python -m pip install -U pip
           python -m pip install -Ur requirements.txt
           python -m pip install -e .
 
+      - name: "Debug 1"
+        run: |
+          echo "steps.install.outcome: ${{ steps.install.outcome }}"
+
       - name: "Ruff"
+        if: ${{ steps.install.outcome == 'success' }}
         uses: astral-sh/ruff-action@v3
 
       - name: "Black"
+        if: ${{ steps.install.outcome == 'success' }}
         uses: psf/black@stable
 
       - name: "Mypy"
+        if: ${{ steps.install.outcome == 'success' }}
         run: |
           mypy src
 
       - name: "Isort"
+        if: ${{ steps.install.outcome == 'success' }}
         uses: isort/isort-action@v1
 
       - name: "Coverage"
+        if: ${{ steps.install.outcome == 'success' }}
+        id: coverage
         run: |
           coverage run --source=src -m pytest
           coverage xml
           coverage report -m
 
+      - name: "Debug 2"
+        run: |
+          echo "steps.coverage.outcome: ${{ steps.coverage.outcome }}"
+
       - name: "Codecov"
+        if: ${{ steps.coverage.outcome == 'success' }}
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
