--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,35 +23,42 @@ jobs:
           cache: "pip"
 
       - name: "Install Requirements"
+        id: install
         run: |
           python -m pip install -U pip
           python -m pip install -Ur requirements.txt
           python -m pip install -e .
 
       - name: "Ruff"
+        if: ${{ steps.install.outcome == 'success' }}
         uses: astral-sh/ruff-action@v3
-        with:
-          src: "src"
 
       - name: "Black"
+        if: ${{ steps.install.outcome == 'success' }}
         uses: psf/black@stable
-        with:
-          src: "src"
+
+      - name: "Mypy"
+        if: ${{ steps.install.outcome == 'success' }}
+        run: |
+          mypy src
+
+      - name: "Isort"
+        if: ${{ steps.install.outcome == 'success' }}
+        uses: isort/isort-action@v1
 
       - name: "Coverage"
+        if: ${{ steps.install.outcome == 'success' }}
+        id: coverage
         run: |
           coverage run --source=src -m pytest
           coverage xml
           coverage report -m
 
       - name: "Codecov"
+        if: ${{ steps.coverage.outcome == 'success' }}
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          #files: ./coverage.xml
-          #flags: unittests # optional
-          #name: github-actions # optional
-          #verbose: true
 
       #- name: "SonarQube"
       #  uses: SonarSource/sonarqube-scan-action@v4
@@ -101,8 +108,8 @@ jobs:
 
       - name: "Install ${{ matrix.version }}"
         run: |
-          python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
+          python -m pip install -U pip pytest
+          #python -m pip install -Ur requirements.txt
           python -m pip install dist/actions_tools-*.whl
 
       - name: "Test ${{ matrix.version }}"
