--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ line-length = 119
 
 [tool.ruff]
 line-length = 119
+target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "B", "Q"]
@@ -53,3 +54,10 @@ select = ["E4", "E7", "E9", "F", "B", "Q"]
 
 [tool.coverage.run]
 omit = ["*/*.egg-info/*"]
+
+# Isort
+
+[tool.isort]
+profile = "black"
+lines_after_imports = 2
+src_paths = ["src", "test"]
