--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write
     with:
-      NAME: release
+      name: release
 
   release:
     name: "Release"
