--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
           python-version: "3.13"
           cache: "pip"
 
-      - name: "Install Requirements"
+      - name: "Install"
         id: install
         run: |
           python -m pip install -U pip
@@ -50,7 +50,7 @@ jobs:
         if: ${{ steps.install.outcome == 'success' }}
         id: coverage
         run: |
-          coverage run --source=src -m pytest
+          coverage run -m pytest
           coverage xml
           coverage report -m
 
@@ -71,7 +71,7 @@ jobs:
     permissions:
       contents: write
     with:
-      NAME: test
+      name: test
 
   test:
     runs-on: ubuntu-latest
@@ -96,10 +96,6 @@ jobs:
           name: test
           path: dist
 
-      - name: "Debug"
-        run: |
-          ls -lAh dist
-
       - name: "Setup Python ${{ matrix.version }}"
         uses: actions/setup-python@v5
         with:
@@ -114,4 +110,4 @@ jobs:
 
       - name: "Test ${{ matrix.version }}"
         run: |
-          pytest
+          pytest -v
