--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,6 +32,10 @@ jobs:
           name: release
           path: dist
 
+      #- name: "Debug event.json"
+      #  run: |
+      #    cat "${GITHUB_EVENT_PATH}"
+
       - name: "Debug"
         run: |
           echo ${GITHUB_REF_NAME}
