--- a/.github/disabled/publish.yaml
+++ b/.github/disabled/publish.yaml
@@ -33,5 +33,5 @@ jobs:
           ls -lAh dist
 
       # TODO: Verify dist and GITHUB_REF_NAME first
-      #- name: "Publish to PyPI"
-      #  uses: pypa/gh-action-pypi-publish@release/v1
+      - name: "Publish to PyPI"
+        uses: pypa/gh-action-pypi-publish@release/v1
