--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,15 +25,21 @@ jobs:
           python-version: "3.13"
           cache: "pip"
 
-      - name: "Install and Build"
+      - name: "Install"
         run: |
           python -m pip install -U pip
           python -m pip install -Ur requirements.txt
+
+      - name: "Build"
+        run: |
           python -m build
 
-      - name: "List Results"
+      - name: "Build Artifacts"
         run: |
-          ls -lAh dist
+          ls -lAh dist/*
+          results="$(ls -lAh dist/* | awk '{print $9" - "$5}')"
+          markdown='Build Artifacts:\n```text\n'"${results}"'\n```'
+          echo -en "${markdown}" >> $GITHUB_STEP_SUMMARY
 
       - name: "Upload to Actions"
         uses: actions/upload-artifact@v4
