--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       #- name: "Debug event.json"
+      #  if: ${{ always() }}
       #  run: |
       #    cat "${GITHUB_EVENT_PATH}"
 
