--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -52,28 +52,16 @@ jobs:
           file_glob: true
           file: dist/*
 
-      - name: "Would run: Test PyPI"
+      - name: "Publish to Test PyPI"
         if: ${{ github.event.release.prerelease }}
-        run: |
-          echo yes
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
 
-      ## TODO: Manually publish the package first
-      #- name: "Publish to Test PyPI"
-      #  if: ${{ github.event.release.prerelease }}
-      #  uses: pypa/gh-action-pypi-publish@release/v1
-      #  with:
-      #    repository-url: https://test.pypi.org/legacy/
-
-      - name: "Would run: Official PyPI"
+      - name: "Publish to PyPI"
         if: ${{ !github.event.release.prerelease }}
-        run: |
-          echo yes
+        uses: pypa/gh-action-pypi-publish@release/v1
 
-      ## TODO: Verify dist and GITHUB_REF_NAME first
-      #- name: "Publish to PyPI"
-      #  if: ${{ !github.event.release.prerelease }}
-      #  uses: pypa/gh-action-pypi-publish@release/v1
-
-      - name: "Update Release Notes"
-        run: |
-          echo TODO: update release notes with useful shit
+      #- name: "Update Release Notes"
+      #  run: |
+      #    echo TODO: update release notes with useful shit
