--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,12 @@ name: "Test"
 on:
   workflow_dispatch:
   push:
+    paths:
+      - "src/**"
+      - "tests/**"
+      - "workflows/test.yaml"
+      - "pyproject.toml"
+      - "requirements.txt"
 
 jobs:
   build:
