--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,15 @@ name: "Test"
 
 on:
   workflow_dispatch:
+  pull_request:
+    paths:
+      - "src/**"
+      - "tests/**"
+      - "workflows/test.yaml"
+      - "pyproject.toml"
+      - "requirements.txt"
   push:
+    branches: [master]
     paths:
       - "src/**"
       - "tests/**"
