--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,6 +58,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
 
       - name: "Update Latest Tag"
+        if: ${{ !github.event.release.prerelease }}
         uses: cssnr/update-version-tags-action@v1
         with:
           major: false
