--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,11 +55,17 @@ jobs:
           python-version: ${{ matrix.version }}
           cache: "pip"
 
-      - name: "Install ${{ matrix.version }}"
+      - name: "Requirements ${{ matrix.version }}"
         run: |
           python -m pip install -U pip pytest
-          #python -m pip install -Ur requirements.txt
-          python -m pip install dist/actions_tools-*.whl
+
+      - name: "Install ${{ matrix.version }}"
+        run: |
+          python -m pip install dist/*.whl
+
+      #- name: "Debug ${{ matrix.version }}"
+      #  run: |
+      #    ls -lAhR dist/
 
       - name: "Test ${{ matrix.version }}"
         run: |
