--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,8 @@ jobs:
     name: "Build"
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    permissions:
-      contents: write
+    #permissions:
+    #  contents: write
 
     steps:
       - name: "Checkout"
@@ -38,7 +38,7 @@ jobs:
         run: |
           python -m build
 
-      - name: "Build Artifacts"
+      - name: "List Artifacts"
         run: |
           ls -lAh ${{ inputs.path }}/*
           results="$(ls -lAh ${{ inputs.path }}/* | awk '{print $9" - "$5}')"
