--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
           ls -lAh dist
 
       - name: "Upload to Release"
-        if: ${{ github.event_name == 'release' }}
+        #if: ${{ github.event_name == 'release' }}
         uses: svenstaro/upload-release-action@v2
         with:
           overwrite: true
@@ -48,7 +48,7 @@ jobs:
           file: dist/*
 
       - name: "Publish to Test PyPI"
-        if: ${{ github.event.release.prerelease }}
+        #if: ${{ github.event.release.prerelease }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
@@ -67,4 +67,4 @@ jobs:
 
       #- name: "Update Release Notes"
       #  run: |
-      #    echo TODO: update release notes with useful shit
+      #    echo update release notes with useful shit
