--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 119
-extend-exclude = "(\\.github)"
+extend-exclude = '(.github)'
 
 # Ruff
 
