--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,20 +50,17 @@ jobs:
           path: dist
 
       - name: "Setup Python ${{ matrix.version }}"
-        continue-on-error: ${{ matrix.version == '3.14' }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.version }}
           cache: "pip"
 
       - name: "Requirements ${{ matrix.version }}"
-        continue-on-error: ${{ matrix.version == '3.14' }}
         run: |
           python -V
           python -m pip install -U pip pytest
 
       - name: "Install ${{ matrix.version }}"
-        continue-on-error: ${{ matrix.version == '3.14' }}
         run: |
           python -m pip install dist/*.whl
 
@@ -72,6 +69,6 @@ jobs:
       #    ls -lAhR dist/
 
       - name: "Test ${{ matrix.version }}"
-        continue-on-error: ${{ matrix.version == '3.14' }}
+        #continue-on-error: ${{ contains('dev', matrix.version) }}
         run: |
           pytest -v
