--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,14 +6,18 @@ on:
       name:
         required: true
         type: string
+      path:
+        required: false
+        type: string
+        default: dist
 
 jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    permissions:
-      contents: write
+    #permissions:
+    #  contents: write
 
     steps:
       - name: "Checkout"
@@ -34,10 +38,10 @@ jobs:
         run: |
           python -m build
 
-      - name: "Build Artifacts"
+      - name: "List Artifacts"
         run: |
-          ls -lAh dist/*
-          results="$(ls -lAh dist/* | awk '{print $9" - "$5}')"
+          ls -lAh ${{ inputs.path }}/*
+          results="$(ls -lAh ${{ inputs.path }}/* | awk '{print $9" - "$5}')"
           markdown='Build Artifacts:\n```text\n'"${results}"'\n```'
           echo -en "${markdown}" >> $GITHUB_STEP_SUMMARY
 
@@ -45,4 +49,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.name }}
-          path: dist
+          path: ${{ inputs.path }}
