--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -40,6 +40,11 @@ jobs:
           python -m pip install -Ur requirements.txt
           python -m pip install -e .
 
+      - name: "Flake8"
+        if: ${{ always() }}
+        run: |
+          flake8 --max-line-length 119 --extend-exclude ".github" .
+
       - name: "Ruff"
         if: ${{ always() }}
         uses: astral-sh/ruff-action@v3
