--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ on:
     paths:
       - "src/**"
       - "tests/**"
-      - "workflows/test.yaml"
+      - ".github/workflows/test.yaml"
       - "pyproject.toml"
       - "requirements.txt"
 
@@ -16,8 +16,8 @@ jobs:
   build:
     name: "Build"
     uses: ./.github/workflows/build.yaml
-    permissions:
-      contents: write
+    #permissions:
+    #  contents: write
     with:
       name: test
 
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["3.10", "3.11", "3.12", "3.13"]
+        version: ["3.10", "3.11", "3.12", "3.13", "3.14-dev"]
     name: "Test ${{ matrix.version }}"
     permissions:
       contents: read
@@ -55,12 +55,20 @@ jobs:
           python-version: ${{ matrix.version }}
           cache: "pip"
 
+      - name: "Requirements ${{ matrix.version }}"
+        run: |
+          python -V
+          python -m pip install -U pip pytest
+
       - name: "Install ${{ matrix.version }}"
         run: |
-          python -m pip install -U pip pytest
-          #python -m pip install -Ur requirements.txt
-          python -m pip install dist/actions_tools-*.whl
+          python -m pip install dist/*.whl
+
+      #- name: "Debug ${{ matrix.version }}"
+      #  run: |
+      #    ls -lAhR dist/
 
       - name: "Test ${{ matrix.version }}"
+        #continue-on-error: ${{ contains('dev', matrix.version) }}
         run: |
           pytest -v
