--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Operating System :: OS Independent",
     "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
@@ -29,23 +29,27 @@ Issues = "https://github.com/cssnr/actions-tools/issues"
 
 # Setup Tools
 
+[tool.setuptools.dynamic]
+version = { attr = "actions.__version__" }
+
+# Build System
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
-
-[tool.setuptools.dynamic]
-version = { attr = "actions.__version__" }
 
 # Black
 
 [tool.black]
 line-length = 119
+extend-exclude = '(\.github)'
 
 # Ruff
 
 [tool.ruff]
 line-length = 119
 target-version = "py313"
+exclude = [".github"]
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "B", "Q"]
@@ -53,7 +57,7 @@ select = ["E4", "E7", "E9", "F", "B", "Q"]
 # Coverage
 
 [tool.coverage.run]
-omit = ["*/*.egg-info/*"]
+omit = ["*.egg-info/*", ".github/*"]
 source = ["src"]
 
 # Isort
@@ -62,3 +66,4 @@ source = ["src"]
 profile = "black"
 lines_after_imports = 2
 src_paths = ["src", "test"]
+skip = [".github"]
