--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,49 +22,46 @@ jobs:
       contents: write
       id-token: write
     environment:
-      name: ${{ github.event.release.prerelease && 'test' || 'pypi' }}
-      url: https://${{ github.event.release.prerelease && 'test.' || '' }}pypi.org/p/actions-tools
+      name: test
+      url: https://test.pypi.org/p/actions-tools
 
     steps:
+      #- name: "Debug event.json"
+      #  if: ${{ always() }}
+      #  run: |
+      #    cat "${GITHUB_EVENT_PATH}"
+
       - name: "Download Artifact"
         uses: actions/download-artifact@v4
         with:
           name: release
           path: dist
 
-      - name: "Debug"
+      - name: "Debug Artifacts"
         run: |
-          echo name: "${{ github.event.release.prerelease && 'test' || 'pypi' }}"
-          echo url: "https://${{ github.event.release.prerelease && 'test.' || '' }}pypi.org/p/actions-tools"
           echo GITHUB_REF_NAME: "${GITHUB_REF_NAME}"
+          echo github.ref_name: "${{ github.ref_name }}"
           ls -lAh dist
 
       - name: "Upload to Release"
-        #if: ${{ github.event_name == 'release' }}
         uses: svenstaro/upload-release-action@v2
         with:
-          overwrite: true
+          #overwrite: true
           file_glob: true
           file: dist/*
 
       - name: "Publish to Test PyPI"
-        #if: ${{ github.event.release.prerelease }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
-
-      - name: "Publish to PyPI"
-        if: ${{ !github.event.release.prerelease }}
-        uses: pypa/gh-action-pypi-publish@release/v1
-
-      - name: "Update Latest Tag"
-        if: ${{ !github.event.release.prerelease }}
-        uses: cssnr/update-version-tags-action@v1
-        with:
-          major: false
-          minor: false
-          tags: latest
+          attestations: false
 
       #- name: "Update Release Notes"
       #  run: |
       #    echo update release notes with useful shit
+
+      - name: "Send Failure Notification"
+        if: ${{ failure() }}
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
