--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,11 +1,15 @@
-name: "Release"
+name: "Publish"
 
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag (default: latest)"
+        default: ""
 
 jobs:
-  release:
-    name: "Release"
+  publish:
+    name: "Publish"
     runs-on: ubuntu-latest
     timeout-minutes: 5
     permissions:
@@ -21,12 +25,18 @@ jobs:
       #  run: |
       #    cat "${GITHUB_EVENT_PATH}"
 
+      - name: "Debug"
+        run: |
+          echo tag: ${{ inputs.tag }}
+          echo latest: ${{ inputs.tag == '' && true || false }}
+
       - name: "Download Release"
         uses: robinraju/release-downloader@v1
         id: release
         with:
+          tag: ${{ inputs.tag }}
+          latest: ${{ inputs.tag == '' && true || false }}
           fileName: "*"
-          latest: true
           out-file-path: "dist"
 
       - name: "List Artifacts"
@@ -38,6 +48,16 @@ jobs:
           results="$(ls -lAh ${LS_DIR}/* | awk '{print $9" - "$5}')"
           markdown='Artifacts:\n```text\n'"${results}"'\n```'
           echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
+          ls dist | grep -- "-${{ steps.release.outputs.tag_name }}-"
+
+      - name: "Verify Input Tag"
+        if: ${{ inputs.tag }}
+        run: |
+          set -e
+          if [[ "${{ inputs.tag }}" != "${{ steps.release.outputs.tag_name }}" ]];then
+            echo "Input tag ${{ inputs.tag }} != downloaded tag: ${{ steps.release.outputs.tag_name }}"
+            exit 1
+          fi
 
       - name: "Publish to PyPI"
         id: publish
