--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,8 @@ name: "Test"
 on:
   workflow_dispatch:
   pull_request:
+  #schedule:
+  #  - cron: "18 18 * * 1,3,5"
   push:
     branches: [master]
     paths:
@@ -72,3 +74,9 @@ jobs:
         #continue-on-error: ${{ contains('dev', matrix.version) }}
         run: |
           pytest -v
+
+      - name: "Schedule Failure Notification"
+        if: ${{ failure() && github.event_name == 'schedule' }}
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
