--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -83,10 +83,12 @@ jobs:
           yamllint -d '${{ env.CONFIG }}' .
 
       - name: "Actionlint"
-        if: ${{ always() && !cancelled() }}
+        if: ${{ !cancelled() }}
         run: |
           echo "::group::Download"
-          tag=$(curl -sI https://github.com/rhysd/actionlint/releases/latest | grep -i '^location:' | sed -E 's|.*/tag/v?(.*)|\1|' | tr -d '\t\r\n')
+          loc=$(curl -sI https://github.com/rhysd/actionlint/releases/latest | grep -i '^location:')
+          echo "loc: ${loc}"
+          tag=$(echo "${loc}" | sed -E 's|.*/tag/v?(.*)|\1|' | tr -d '\t\r\n')
           echo "tag: ${tag}"
           url="https://github.com/rhysd/actionlint/releases/latest/download/actionlint_${tag}_linux_amd64.tar.gz"
           echo "url: ${url}"
