--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,10 +18,12 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
-      #- name: "Debug event.json"
-      #  if: ${{ always() }}
-      #  run: |
-      #    cat "${GITHUB_EVENT_PATH}"
+      - name: "Debug CTX github"
+        if: ${{ !github.event.act }}
+        continue-on-error: true
+        env:
+          GITHUB_CTX: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CTX"
 
       - name: "Setup Python 3.13"
         uses: actions/setup-python@v5
@@ -37,35 +39,69 @@ jobs:
           python -m pip install -e .
 
       - name: "Flake8"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: |
           flake8 --max-line-length 119 --extend-exclude ".github" .
 
       - name: "Ruff"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         uses: astral-sh/ruff-action@v3
+        with:
+          version: latest
 
       - name: "Black"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         uses: psf/black@stable
 
       - name: "Isort"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         uses: isort/isort-action@v1
 
       - name: "Mypy"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: |
           mypy src
 
+      #- name: "Hadolint"
+      #  if: ${{ !cancelled() }}
+      #  uses: hadolint/hadolint-action@v3.1.0
+
       - name: "Prettier"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: |
+          echo "::group::Install"
           npm install prettier
+          echo "::endgroup::"
           npx prettier --check .
 
+      - name: "Yamllint"
+        if: ${{ !cancelled() }}
+        env:
+          CONFIG: "{extends: relaxed, ignore: [node_modules/], rules: {line-length: {max: 119}}}"
+        run: |
+          echo "::group::List Files"
+          yamllint -d '${{ env.CONFIG }}' --list-files .
+          echo "::endgroup::"
+          yamllint -d '${{ env.CONFIG }}' .
+
+      - name: "Actionlint"
+        if: ${{ !cancelled() }}
+        run: |
+          echo "::group::Download"
+          loc=$(curl -sI https://github.com/rhysd/actionlint/releases/latest | grep -i '^location:')
+          echo "loc: ${loc}"
+          tag=$(echo "${loc}" | sed -E 's|.*/tag/v?(.*)|\1|' | tr -d '\t\r\n')
+          echo "tag: ${tag}"
+          url="https://github.com/rhysd/actionlint/releases/latest/download/actionlint_${tag}_linux_amd64.tar.gz"
+          echo "url: ${url}"
+          curl -sL "${url}" | tar xz -C "${RUNNER_TEMP}" actionlint
+          file "${RUNNER_TEMP}/actionlint"
+          "${RUNNER_TEMP}/actionlint" --version
+          echo "::endgroup::"
+          "${RUNNER_TEMP}/actionlint" -color -verbose -shellcheck= -pyflakes=
+
       - name: "Coverage"
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         id: coverage
         run: |
           coverage run -m pytest
@@ -73,7 +109,7 @@ jobs:
           coverage report -m
 
       - name: "Codecov"
-        if: ${{ always() && steps.coverage.outcome == 'success' }}
+        if: ${{ !cancelled() && steps.coverage.outcome == 'success' }}
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
